--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.rdfirebase">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -11,17 +14,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:largeHeap="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        android:hardwareAccelerated="false"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.authentication.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".SignupActivity"/>
-        <activity android:name=".ResetPasswordActivity"/>
+        <activity android:name=".activities.home.MainActivity"/>
+        <activity android:name=".activities.authentication.SignupActivity"/>
+        <activity android:name=".activities.authentication.ResetPasswordActivity"/>
+        <activity android:name=".activities.storage.ImageUploadActivity"/>
+        <activity android:name=".activities.storage.VideoUploadActivity"/>
+        <activity android:name=".activities.storage.StorageActivity"/>
     </application>
 
 </manifest>
